refactoring: iteration - 2